--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 </th>
                 <th scope="col" class="px-6 py-3">
                     <div class="flex items-center">
-                        Apaterno
+                        Apellidos
                            </div>
                 </th>
                 <th scope="col" class="px-6 py-3">
@@ -42,6 +42,13 @@
                        
                     </div>
                 </th>
+                <th scope="col" class="px-6 py-3">
+                    <div class="flex items-center">
+                        Telefono
+                       
+                    </div>
+                </th>
+                
                 <th scope="col" class="px-6 py-3">
                     <div class="flex items-center">
                         Editar
@@ -67,8 +74,10 @@
             {%for alum in alumno%}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200" >
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ alum.nombre }}</th>
-                <td class="px-6 py-4">{{ alum.apaterno }}</td>
+                <td class="px-6 py-4">{{ alum.apellidos }}</td>
                 <td class="px-6 py-4">{{ alum.email }}</td>
+                <td class="px-6 py-4">{{ alum.telefono }}</td>
+
                 <td class="px-6 py-4 text-right">
                     <a href="modificar?id={{ alum.id }}" class="flex items-center
                     gap-2 bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600">
